[package]
name = "verified-graphs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Verified graphs from first principles"
repository = "https://github.com/SlugLab/verified-graphs"
readme = "../README.md"
keywords = ["graphs", "graph theory", "verus", "verification"]

[dependencies]
vstd = "=0.0.0-2025-12-14-0054"

[package.metadata.verus]
verify = true

[package.metadata.verus.ide]
extra_args = "--expand-errors"
